# MacroKit

./: .gitignore  DATA_NEEDS.md  Makefile  README.md  TODO.txt  pyproject.toml  requirements.txt
config/database/: datalake_config.yaml
dashboards/: app.py
dashboards/pages/: data_viewer.py
data/ingestion/: ingest_data_full.py
data/setup/: initialize_datalake.py
macrokit_datalake/: .user.yml  Makefile  config_utils.py  datalake_config.yaml  dbt_project.yml  profiles.yml
macrokit_datalake.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
macrokit_datalake/ingest/: initialize.py  raw.py
macrokit_datalake/ingest/extractors/: base.py  fred.py
macrokit_datalake/ingest/processors/: base.py  economic.py  market.py  treasury.py
macrokit_datalake/models/0_staging/: _sources.yml  schema.yml  stg_treasury_yields.sql  stg_us_market_data.sql
macrokit_datalake/models/2_marts/economics/: schema.yml
macrokit_datalake/models/2_marts/market_data/: schema.yml
macrokit_datalake/models/marts/economics/: fct_economic_indicators.sql  fct_us_economic_indicators.sql  schema.yml
macrokit_datalake/models/marts/market_data/: fct_treasury_yields.sql  fct_yield_spreads.sql  schema.yml
macrokit_datalake/models/staging/: _sources.yml  schema.yml  stg_us_economic_indicators.sql
macrokit_datalake/seeds/: ref_countries.csv  ref_sources.csv  ref_us_economic.csv  ref_us_market_data.csv  ref_us_treasury_yields.csv
notebooks/: STRATEGIES.md
